--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light nav-background">
-      <a class="navbar-brand text-white" href="/">RUTSOM Summer Class Videos</a>
+      <a class="navbar-brand text-white" href="/">RUTSOM Library</a>
       <button
         class="navbar-toggler"
         type="button"
