--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light nav-background">
-      <a class="navbar-brand text-white" href="/">RUTSOM Library</a>
+      <a class="navbar-brand text-white ml-1" href="/">RUTSOM Library</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -39,12 +39,12 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link text-white mt-2" href="/"
+            <a class="nav-link text-white mt-2 ml-1" href="/"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white mt-2" href="/assets/html/videos.html">
+            <a class="nav-link text-white mt-2 ml-1" href="/assets/html/videos.html">
                 
                 Class Videos</a>
             
