created list tags and format

--- a/index.html
+++ b/index.html
@@ -68,18 +68,22 @@
       </div>
       <div class="row">
         <div class="col-12 col-md-6">
-          <h3 class="text-center my-3" id="july">July</h3>
+          <h3 class="text-center my-3">July</h3>
+          <ul id="july" class="list"></ul>
         </div>
         <div class="col-12 col-md-6">
-          <h3 class="text-center my-3" id="august">August</h3>
+          <h3 class="text-center my-3">August</h3>
+          <ul id="august" class="list"></ul>
         </div>
       </div>
       <div class="row">
         <div class="col-12 col-md-6">
-          <h3 class="text-center my-3" id="september">September</h3>
+          <h3 class="text-center my-3">September</h3>
+          <ul id="september" class="list"></ul>
         </div>
         <div class="col-12 col-md-6">
-          <h3 class="text-center my-3" id="october">October</h3>
+          <h3 class="text-center my-3">October</h3>
+          <ul id="october" class="list"></ul>
         </div>
       </div>
     </div>
