appended july videos

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col-12 col-md-6">
           <h3 class="text-center my-3">July</h3>
-          <ul id="july" class="list"></ul>
+          <ul id="july" class="list text-center"></ul>
         </div>
         <div class="col-12 col-md-6">
           <h3 class="text-center my-3">August</h3>
