--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
         </div>
         <div class="col-12 col-md-6">
           <h3 class="text-center my-3">August</h3>
-          <ul id="august" class="list"></ul>
+          <ul id="august" class="list text-center"></ul>
         </div>
       </div>
       <div class="row">
         <div class="col-12 col-md-6">
           <h3 class="text-center my-3">September</h3>
-          <ul id="september" class="list"></ul>
+          <ul id="september" class="list text-center"></ul>
         </div>
         <div class="col-12 col-md-6">
           <h3 class="text-center my-3">October</h3>
-          <ul id="october" class="list"></ul>
+          <ul id="october" class="list text-center"></ul>
         </div>
       </div>
     </div>
