added icons to navbar

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <!-- Navbar begins here -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light nav-background">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light nav-background fixed-top">
       <a class="navbar-brand text-white ml-1" href="/">RUTSOM Library</a>
       <button
         class="navbar-toggler"
@@ -43,16 +43,40 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link text-white mt-2 ml-1" href="/"
-              >Home <span class="sr-only">(current)</span></a
+            <a class="nav-link text-white mt-2 ml-2" href="/index.html"
+              ><i class="fas fa-home"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Home <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
             <a
-              class="nav-link text-white mt-2 ml-1"
-              href="/assets/html/videos.html"
+              class="nav-link text-white mt-2 ml-4"
+              href="#julyH"
             >
-              Class Videos</a
+            <i class="fas fa-video"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;July</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link text-white mt-2 ml-4"
+              href="#augustH"
+            >
+            <i class="fas fa-video"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;August</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link text-white mt-2 ml-4"
+              href="#septemberH"
+            >
+            <i class="fas fa-video"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;September</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link text-white mt-2 ml-4"
+              href="#octoberH"
+            >
+            <i class="fas fa-video"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;October</a
             >
           </li>
         </ul>
@@ -68,21 +92,21 @@
       </div>
       <div class="row">
         <div class="col-12 col-md-6">
-          <h3 class="text-center my-3">July</h3>
+          <h3 class="text-center my-3" id="julyH">July</h3>
           <ul id="july" class="list text-center"></ul>
         </div>
         <div class="col-12 col-md-6">
-          <h3 class="text-center my-3">August</h3>
+          <h3 class="text-center my-3" id="augustH">August</h3>
           <ul id="august" class="list text-center"></ul>
         </div>
       </div>
       <div class="row">
         <div class="col-12 col-md-6">
-          <h3 class="text-center my-3">September</h3>
+          <h3 class="text-center my-3" id="septemberH">September</h3>
           <ul id="september" class="list text-center"></ul>
         </div>
         <div class="col-12 col-md-6">
-          <h3 class="text-center my-3">October</h3>
+          <h3 class="text-center my-3" id="octoberH">October</h3>
           <ul id="october" class="list text-center"></ul>
         </div>
       </div>
