--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link text-white mt-2 ml-2" href="/index.html"
+            <a class="nav-link text-white mt-2 ml-2" href="#home"
               ><i class="fas fa-home"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Home <span class="sr-only">(current)</span></a
             >
           </li>
@@ -84,30 +84,34 @@
     </nav>
 
     <!-- Main content goes here -->
-    <div class="container">
-      <div class="row">
-        <div class="col-12 col-md-8 mx-auto">
-          <h1 class="text-center mt-3">RUTSOM Class Videos</h1>
+    <div class="container mx-auto text-center">
+      <div class="row" id="home">
+        <div class="col-12 col-md-8 mx-auto text-center">
+          <h1 class="text-center mt-5 topintro">RUTSOM<br><font class="heading">Summer Bootcamp<br>Video Library</font></h1>
         </div>
       </div>
       <div class="row">
-        <div class="col-12 col-md-6">
-          <h3 class="text-center my-3" id="julyH">July</h3>
-          <ul id="july" class="list text-center"></ul>
-        </div>
-        <div class="col-12 col-md-6">
-          <h3 class="text-center my-3" id="augustH">August</h3>
-          <ul id="august" class="list text-center"></ul>
+        <div class="col-12 col-md-12 mx-auto border shadow py-5 mt-5 mb-4">
+          <h3 class="text-center" id="julyH">July</h3>
+          <div class="row" id="july"></div>
         </div>
       </div>
       <div class="row">
-        <div class="col-12 col-md-6">
-          <h3 class="text-center my-3" id="septemberH">September</h3>
-          <ul id="september" class="list text-center"></ul>
+        <div class="col-12 col-md-12 mx-auto border shadow py-5 my-3">
+          <h3 class="text-center" id="augustH">August</h3>
+          <div class="row" id="august"></div>
         </div>
-        <div class="col-12 col-md-6">
-          <h3 class="text-center my-3" id="octoberH">October</h3>
-          <ul id="october" class="list text-center"></ul>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-12 mx-auto border shadow py-5 my-3">
+          <h3 class="text-center" id="septemberH">September</h3>
+          <div class="row" id="september"></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-12 mx-auto border shadow py-5 mt-3 mb-5">
+          <h3 class="text-center" id="octoberH">October</h3>
+          <div class="row" id="october"></div>
         </div>
       </div>
     </div>
