--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="container mx-auto text-center">
       <div class="row" id="home">
         <div class="col-12 col-md-8 mx-auto text-center">
-          <h1 class="text-center mt-5 topintro">RUTSOM<br><font class="heading">Summer Bootcamp<br>Video Library</font></h1>
+          <h1 class="text-center mt-5 topintro">RUTSOM 2020<br><font class="heading">Summer Bootcamp<br>Video Library</font></h1>
         </div>
       </div>
       <div class="row">
