--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <!-- Navbar begins here -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light nav-background fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light nav-background fixed-top shadow">
       <a class="navbar-brand text-white ml-1" href="/">RUTSOM Library</a>
       <button
         class="navbar-toggler"
